Version 9.1 - xxx edition. 21 August 2020

Added compile setting to disable networking functions

Improved ZX Desktop: 
-Added direct buttons
-Added devices icons
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: Chess, Grid, Random

Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes

Fixed segfaults when changing machines and having ZX Desktop windows opened
Fixed easter egg anc cyrillic characters



Version 9.0 - Turbo Esprit edition. 17 August 2020

Added new emulated machines: 
-MSX1 
-Spectravideo 318/328
-Colecovision 
-Sega SG-1000

Added new compiled version: FreeBSD
Added support for compilation on Haiku
Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
Added browser for quicksave snapshots
Added save screen to bmp feature
Added menu to download ZEsarUX extras
Added Windows icon
Added F key to toggle top cpu speed
Added F key to pause/unpause tape
Added setting to rotate output tape when selecting tape that already exists
Added setting to resample audio output to 1 bit
Added showing yesterday ZEsarUX users 


Improved emulation: use a slightly less cpu on every scanline
Improved compilation script: allow to set different C compiler
Improved compiler versions: now all releases are compiled with optimizations, they use lot of less cpu than before

Improved menu:
-Allow some windows to be running on the background, all at the same time. This makes the menu environment more powerful!
-Active windows are saved and restored on startup
-Pressing the menu key (F5 by default) when menu is open, it will send you back to the main menu. Also pressing over Z logo on ext desktop
-Some window hotkeys can be pressed with mouse click (example: Debug CPU Window, File utilities, View Sprites, Hex Editor, Disassemble)
-Improved some interface fonts in sizes smaller than 8 pixel width
-Added GUI Styles: MSX, Solarized Dark & Light